fixed card spacing

--- a/wp-content/themes/danfleming/style.css
+++ b/wp-content/themes/danfleming/style.css
@@ -1244,7 +1244,7 @@ body {
 .projectCard h3 {
     font-size: 12px;
      font-weight: 700;
-		 padding-top: 35px;
+		 padding-top: 30px;
 }
 
 .projectCard .button {
